# cpp-unit-test-project

./: ReadMe.md
cpp-unit-test-project/: CMakeLists.txt
cpp-unit-test-project (1)/task1-assert/: CMakeLists.txt  task1_assert_tests.cpp  task1_logic.cpp
cpp-unit-test-project (1)/task2-ctest/: test_task2_1.cpp
cpp-unit-test-project (1)/task3-8-gtest/: CMakeLists.txt  all_tests.cpp  task3_logic.cpp  task4_logic.cpp  task5_logic.cpp  task6_logic.cpp  task7_logic.cpp  task8_logic.cpp  tasks.h
cpp-unit-test-project/task2-ctest/: CMakeLists.txt  task2_logic.cpp  task2_logic.h  test_task2_2.cpp  test_task2_3.cpp
cpp-unit-test-project/task3-8-gtest/: all_tests.cpp  task3_logic.cpp  task3_logic.h  task4_logic.cpp  task4_logic.h  task5_logic.cpp  task5_logic.h  task6_logic.cpp  task6_logic.h  task7_logic.cpp  task7_logic.h  task8_logic.cpp  task8_logic.h
